--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-body {
-  width: 1200px;
+.body {
+  width: 1300px;
   margin: 0 auto;
   font-family: "PT Sans";
   font-style: normal;
@@ -10,8 +10,31 @@ body {
 }
 
 header {
+  position: fixed;
   display: flex;
   justify-content: space-between;
+  width: 1280px;
+  height: 95px;
+  background-color: white;
+  z-index: 2;
+}
+
+.main {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  height: 2900px;
+  background: url(images/bg-picture.png) no-repeat fixed;
+  background-position: right 190px top 80px;
+}
+
+.img-logo {
+  width: 240px;
+  height: 50px;
+}
+
+.text-hero {
+  padding-top: 44px;
 }
 
 .Documentation {
@@ -30,16 +53,18 @@ header {
 }
 
 .Documentation p:nth-child(2) {
-  margin-right: 600px;
+  margin-right: 700px;
   font-family: "Staatliches";
   font-style: normal;
   font-weight: 400;
   font-size: 22px;
   line-height: 28px;
   letter-spacing: 0.03em;
+  white-space: nowrap;
 }
 
 .title {
+  position: relative;
   margin-top: 70px;
   margin-bottom: 40px;
   font-family: "Francois One";
@@ -48,6 +73,16 @@ header {
   font-size: 36px;
   line-height: 48px;
   text-transform: uppercase;
+}
+
+.title::before {
+  position: absolute;
+  content: " ";
+  background-color: rgb(0, 0, 0);
+  height: 8px;
+  width: 100px;
+  top: -20px;
+  left: 0;
 }
 
 .subtitle {
@@ -83,4 +118,32 @@ header {
 
 .span {
   background-color: rgb(214, 213, 213);
+}
+
+.aside {
+  display: flex;
+  flex-direction: column;
+  position: sticky;
+  top: 110px;
+  gap: 75px;
+  /* padding-top: 110px; */
+  margin-top: 110px;
+  width: 500px;
+  height: 450px;
+  font-family: "Francois One";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 48px;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #000000;
+}
+
+.aside-item {
+  width: 400px;
+  height: 48px;
+  border-bottom: 1px solid #c9c9c9;
+  text-decoration: none;
+  color: black;
 }
