--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+html {
+  scroll-behavior: smooth;
+}
 .body {
   width: 1300px;
   margin: 0 auto;
@@ -26,6 +29,7 @@ header {
   height: 2900px;
   background: url(images/bg-picture.png) no-repeat fixed;
   background-position: right 190px top 80px;
+  margin-bottom: 250px;
 }
 
 .img-logo {
@@ -146,4 +150,71 @@ header {
   border-bottom: 1px solid #c9c9c9;
   text-decoration: none;
   color: black;
+}
+
+.wrap {
+  display: grid;
+  grid-template-columns: repeat(4, 270px);
+  grid-template-rows: repeat(4, 180px);
+  gap: 30px;
+}
+
+.card {
+  width: 270px;
+  height: 180px;
+  position: relative;
+  perspective: 1000px;
+}
+
+.front,
+.back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  backface-visibility: hidden;
+  transition: all 2s;
+}
+
+.front {
+}
+
+.back {
+  transform: rotateX(180deg);
+}
+
+.card:hover .front {
+  transform: rotateX(180deg);
+}
+
+.card:hover .back {
+  transform: rotateX(360deg);
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+.footer-text {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 36px;
+  letter-spacing: 0.04em;
+  color: #000000;
+  position: relative;
+  margin-bottom: 60px;
+  margin-left: 190px;
+}
+
+.footer-text::before {
+  position: absolute;
+  content: " ";
+  width: 100px;
+  height: 8px;
+  background-color: #000000;
+  top: 20px;
+  left: -130px;
 }
